feat: 💩 force `create-subject` functionality (#384)
