# apps/server/docs/swagger.json
@@ -67,6 +67,39 @@
 					"username": "john_doe",
 					"password": "my-password"
 				}
+			},
+			"Subject": {
+				"properties": {
+					"accountId": {
+						"type": "string"
+					},
+					"displayName": {
+						"type": "string"
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"birthDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"weight": {
+						"type": "number",
+						"format": "double"
+					},
+					"height": {
+						"type": "number",
+						"format": "double"
+					},
+					"nationality": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -190,6 +223,37 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/AuthenticateAccount"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/subject": {
+			"post": {
+				"operationId": "create-subject",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Creates an account.",
+				"tags": [
+					"Subject"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Subject"
 							}
 						}
 					}
