# apps/server/src/modules/shared-kernel/domain/value-objects/account-id.ts
@@ -1,0 +1,3 @@
+import { Account } from '../../../identity-and-access-mangement/domain/entities/account.js'
+
+export type AccountId = Account['_id']
