# apps/server/src/modules/subject/subject.ts
@@ -1,7 +1,9 @@
 // These data would be used mostly for in-platform sharing and are optional to respect user's privacy, weight,
 // age, and height will be actually used to define personalised dosage.
 // Additionall data will be anonimized and maybe sent to analitics to support public reseach.
-import { NotImplemented } from '../../shared/core/domain/exceptions/not-implemented.js'
+
+import { prisma } from '../../shared/infrastructure/prisma/prisma.js'
+import { NotImplemented } from '~foundry/exceptions/not-implemented.js'
 
 export interface Subject {
 	// Subject may be linked to specific account.
@@ -18,14 +20,27 @@ export interface Subject {
 	// TODO: We may think about health conditions, mental disorders or some other data that may be worthly for analitics.
 }
 
-export function createSubject(_payload: Subject): Subject {
-	throw new NotImplemented()
+// TODO: This should be refactored to use CQRS/Domain.
+export async function createSubject(_payload: Subject): Promise<any> {
+	return prisma.subject.create({
+		data: {
+			account: {
+				connect: {
+					id: _payload.accountId
+				}
+			},
+			firstName: _payload.firstName,
+			lastName: _payload.lastName,
+			weight: _payload.weight,
+			height: _payload.height
+		}
+	})
 }
 
 export function updateSubject(_subjectId: string, _payload: Partial<Subject>): Subject {
-	throw new NotImplemented()
+	throw new NotImplemented(updateSubject)
 }
 
 export function deleteSubject(_subjectId: string): Promise<void> {
-	throw new NotImplemented()
+	throw new NotImplemented(deleteSubject)
 }
